crates/grafana-plugin-sdk-macros/tests/ui-fail/duplicate_services.stderr
error: `data` set multiple times.
  --> tests/ui-fail/duplicate_services.rs:46:47
   |
46 |     #[grafana_plugin_sdk::main(services(data, data))]
   |                                               ^^^^
